2011-05-30  Petr Machata  <pmachata@redhat.com>

	* common.h (enable_breakpoint, disable_breakpoint)
	(continue_enabling_breakpoint): Pass Process * instead of pid.
	* breakpoints.c, sysdeps/linux-gnu/breakpoint.c: Adapt.
	* sysdeps/linux-gnu/trace.c: Adapt.

2011-05-12  Petr Machata  <pmachata@redhat.com>

	* common.h: include config.h

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* common.h (breakpoints_init, insert_breakpoint, open_program):
	Pass an extra argument that defines whether we should enable
	breakpoints.

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* execute_program.c (execute_program): Returns pid_t.
	* proc.c (open_program): Always assumes that pid is != 0.
	* common.h, libltrace.c (ltrace_init): Adapt to above.

2011-05-09  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Process): Drop field type_being_displayed.

2011-05-06  Petr Machata  <pmachata@redhat.com>

	* common.h (struct Process.leader): Points to leader thread of the
	process.
	(process_leader, process_tasks): For querying threads of process.
	(process_status, process_stopped): For querying task status.
	(task_kill): For sending signals to a single task.
	(each_task): Like each_process, but for tasks of a process.
	* proc.c (open_pid): Open all tasks of the process.
	(each_task): Implementation.
	* sysdeps/linux-gnu/proc.c (process_leader, process_tasks)
	(process_stopped, process_status): Implementations.
	* handle_event.c: Update throughout.
	* sysdeps/linux-gnu/events.c: Likewise.
	* sysdeps/linux-gnu/trace.c (trace_pid): waitpid should wait for
	threads, too.

2011-05-05  Petr Machata  <pmachata@redhat.com>

	* common.h (add_process, remove_process, each_process)
	(enum pcb_status): Conceal the list of processes behind an
	interface.
	* handle_event.h (handle_clone, handle_exit, handle_exec): Use it.
	* libltrace.h (signal_alarm): Likewise.
	* sysdeps/linux-gnu/events.c (next_event): Likewise.
	* proc.c (open_program, pid2proc): Likewise.